{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 207,
  "lineage": "2abdedfc-c44a-76be-8d5d-aa40c73870e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "edify_ec2_useast1_t2micro",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:229544224511:instance/i-0483dc3401924663c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0483dc3401924663c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "edify_useast1_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f793f431ce57b642",
            "private_dns": "ip-10-0-0-12.ec2.internal",
            "private_ip": "10.0.0.12",
            "public_ip": "54.209.176.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-066594f78efbcfe65",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2bb298a80306553",
            "tags": {
              "Name": "EDIFY_EC2_USEAST1_T2MICRO"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0259dbb6b1d651c4e"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.edify_useast1_igw",
            "aws_key_pair.edify_useast1_ssh_key_pair",
            "aws_security_group.edify_useast1_ssh_sg",
            "aws_subnet.edify_10_0_0_0_useast1b_pub",
            "aws_vpc.edify_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "edify_ec2_useast2_t2micro",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09558250a3419e7d0",
            "arn": "arn:aws:ec2:us-east-2:229544224511:instance/i-0a4b6efb6e0f8e96f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4b6efb6e0f8e96f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "edify_useast2_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0626ac1f68ea0452d",
            "private_dns": "ip-10-2-0-12.us-east-2.compute.internal",
            "private_ip": "10.2.0.12",
            "public_ip": "18.188.159.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ba0ae505a5195a4d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0625efe75f8827e18",
            "tags": {
              "Name": "EDIFY_EC2_USEAST2_T2MICRO"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e6712254a9e43bcb"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.edify_useast2_igw",
            "aws_key_pair.edify_useast2_ssh_key_pair",
            "aws_security_group.edify_useast2_ssh_sg",
            "aws_subnet.edify_10_2_0_0_useast2b_pub",
            "aws_vpc.edify_vpc_midw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "edify_ec2_uswest2_t2micro",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472933a1395e172",
            "arn": "arn:aws:ec2:us-west-2:229544224511:instance/i-00bd376cfe438e1ac",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00bd376cfe438e1ac",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "edify_uswest2_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-038b4520f00889d89",
            "private_dns": "ip-10-1-0-12.us-west-2.compute.internal",
            "private_ip": "10.1.0.12",
            "public_ip": "35.161.46.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0821594e8306a6c6f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5ed96890b47c6d6",
            "tags": {
              "Name": "EDIFY_EC2_USWEST2_T2MICRO"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d3020eaed0fcfd85"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.edify_uswest2_igw",
            "aws_key_pair.edify_uswest2_ssh_key_pair",
            "aws_security_group.edify_uswest2_ssh_sg",
            "aws_subnet.edify_10_1_0_0_uswest2b_pub",
            "aws_vpc.edify_vpc_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "edify_useast1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229544224511:internet-gateway/igw-04fd716d08bebdf18",
            "id": "igw-04fd716d08bebdf18",
            "owner_id": "229544224511",
            "tags": {
              "Name": "EDIFY_IGW_USEAST1"
            },
            "vpc_id": "vpc-0e5be5c67371adb74"
          },
          "dependencies": [
            "aws_vpc.edify_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "edify_useast2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:229544224511:internet-gateway/igw-06b8308be53fd55bb",
            "id": "igw-06b8308be53fd55bb",
            "owner_id": "229544224511",
            "tags": {
              "Name": "EDIFY_IGW_USEAST2"
            },
            "vpc_id": "vpc-005628e22f0fe3d47"
          },
          "dependencies": [
            "aws_vpc.edify_vpc_midw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "edify_uswest2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:229544224511:internet-gateway/igw-0a993f5a78234c45f",
            "id": "igw-0a993f5a78234c45f",
            "owner_id": "229544224511",
            "tags": {
              "Name": "EDIFY_IGW_USWEST2"
            },
            "vpc_id": "vpc-0f0300f8df3d3e36d"
          },
          "dependencies": [
            "aws_vpc.edify_vpc_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "edify_useast1_pub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229544224511:network-acl/acl-0f576ae4e47f94dda",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f576ae4e47f94dda",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "229544224511",
            "subnet_ids": [
              "subnet-0b2bb298a80306553"
            ],
            "tags": {
              "Name": "EDIFY_USEAST1_PUB_ACL"
            },
            "vpc_id": "vpc-0e5be5c67371adb74"
          },
          "dependencies": [
            "aws_internet_gateway.edify_useast1_igw",
            "aws_subnet.edify_10_0_0_0_useast1b_pub",
            "aws_vpc.edify_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "edify_useast2_pub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:229544224511:network-acl/acl-0939f71e842de3fe9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0939f71e842de3fe9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "229544224511",
            "subnet_ids": [
              "subnet-0625efe75f8827e18"
            ],
            "tags": {
              "Name": "EDIFY_USEAST2_PUB_ACL"
            },
            "vpc_id": "vpc-005628e22f0fe3d47"
          },
          "dependencies": [
            "aws_internet_gateway.edify_useast2_igw",
            "aws_subnet.edify_10_2_0_0_useast2b_pub",
            "aws_vpc.edify_vpc_midw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "edify_uswest2_pub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:229544224511:network-acl/acl-05dd6d9b1791edc0a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05dd6d9b1791edc0a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "229544224511",
            "subnet_ids": [
              "subnet-0a5ed96890b47c6d6"
            ],
            "tags": {
              "Name": "EDIFY_USWEST2_PUB_ACL"
            },
            "vpc_id": "vpc-0f0300f8df3d3e36d"
          },
          "dependencies": [
            "aws_internet_gateway.edify_uswest2_igw",
            "aws_subnet.edify_10_1_0_0_uswest2b_pub",
            "aws_vpc.edify_vpc_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edify_useast1_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-001369d7198879788",
            "owner_id": "229544224511",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fd716d08bebdf18",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.1.0.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0c225fe0fec176220"
              },
              {
                "cidr_block": "10.2.0.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0fbf5dad85c627186"
              }
            ],
            "tags": {
              "Name": "EDIFY_USEAST1_RTB"
            },
            "vpc_id": "vpc-0e5be5c67371adb74"
          },
          "dependencies": [
            "aws_internet_gateway.edify_useast1_igw",
            "aws_vpc.edify_vpc_east",
            "aws_vpc.edify_vpc_west",
            "aws_vpc_peering_connection.east2_to_east1",
            "aws_vpc_peering_connection.west2_to_east1",
            "data.aws_caller_identity.edify_caller_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edify_useast2_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01b37e937cd3c6c63",
            "owner_id": "229544224511",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b8308be53fd55bb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0fbf5dad85c627186"
              },
              {
                "cidr_block": "10.1.0.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-097ec26e04c7d014c"
              }
            ],
            "tags": {
              "Name": "EDIFY_USEAST2_RTB"
            },
            "vpc_id": "vpc-005628e22f0fe3d47"
          },
          "dependencies": [
            "aws_internet_gateway.edify_useast2_igw",
            "aws_vpc.edify_vpc_midw",
            "aws_vpc.edify_vpc_west",
            "aws_vpc_peering_connection.east2_to_east1",
            "aws_vpc_peering_connection.east2_to_west2",
            "data.aws_caller_identity.edify_caller_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edify_uswest2_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05b8dc386eae43ee1",
            "owner_id": "229544224511",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a993f5a78234c45f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0c225fe0fec176220"
              },
              {
                "cidr_block": "10.2.0.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-097ec26e04c7d014c"
              }
            ],
            "tags": {
              "Name": "EDIFY_USWEST2_RTB"
            },
            "vpc_id": "vpc-0f0300f8df3d3e36d"
          },
          "dependencies": [
            "aws_internet_gateway.edify_uswest2_igw",
            "aws_vpc.edify_vpc_east",
            "aws_vpc.edify_vpc_west",
            "aws_vpc_peering_connection.east2_to_west2",
            "aws_vpc_peering_connection.west2_to_east1",
            "data.aws_caller_identity.edify_caller_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "edify_useast1_pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f82fb9b03db1157",
            "route_table_id": "rtb-001369d7198879788",
            "subnet_id": "subnet-0b2bb298a80306553"
          },
          "dependencies": [
            "aws_internet_gateway.edify_useast1_igw",
            "aws_route_table.edify_useast1_rtb",
            "aws_subnet.edify_10_0_0_0_useast1b_pub",
            "aws_vpc.edify_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "edify_useast2_pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e628b59676b7516",
            "route_table_id": "rtb-01b37e937cd3c6c63",
            "subnet_id": "subnet-0625efe75f8827e18"
          },
          "dependencies": [
            "aws_internet_gateway.edify_useast2_igw",
            "aws_route_table.edify_useast2_rtb",
            "aws_subnet.edify_10_2_0_0_useast2b_pub",
            "aws_vpc.edify_vpc_midw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "edify_uswest2_pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b58516b2de4768f3",
            "route_table_id": "rtb-05b8dc386eae43ee1",
            "subnet_id": "subnet-0a5ed96890b47c6d6"
          },
          "dependencies": [
            "aws_internet_gateway.edify_uswest2_igw",
            "aws_route_table.edify_uswest2_rtb",
            "aws_subnet.edify_10_1_0_0_uswest2b_pub",
            "aws_vpc.edify_vpc_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edify_useast1_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229544224511:security-group/sg-0259dbb6b1d651c4e",
            "description": "Allows SSH Access for Developers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0259dbb6b1d651c4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Custom Port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EDIFY_USEAST1_SSH_SG",
            "name_prefix": "",
            "owner_id": "229544224511",
            "revoke_rules_on_delete": false,
            "tags": {
              "NAME": "EDIFY_USEAST1_SSH_SG"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0e5be5c67371adb74"
          },
          "dependencies": [
            "aws_vpc.edify_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edify_useast2_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:229544224511:security-group/sg-0e6712254a9e43bcb",
            "description": "Allows SSH Access for Developers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6712254a9e43bcb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Custom Port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EDIFY_USEAST2_SSH_SG",
            "name_prefix": "",
            "owner_id": "229544224511",
            "revoke_rules_on_delete": false,
            "tags": {
              "NAME": "EDIFY_USEAST2_SSH_SG"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-005628e22f0fe3d47"
          },
          "dependencies": [
            "aws_vpc.edify_vpc_midw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edify_uswest2_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:229544224511:security-group/sg-0d3020eaed0fcfd85",
            "description": "Allows SSH/Ping Access for Developers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3020eaed0fcfd85",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Custom Port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EDIFY_USWEST2_SSH_SG",
            "name_prefix": "",
            "owner_id": "229544224511",
            "revoke_rules_on_delete": false,
            "tags": {
              "NAME": "EDIFY_USWEST2_SSH_SG"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0f0300f8df3d3e36d"
          },
          "dependencies": [
            "aws_vpc.edify_vpc_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edify_10_0_0_0_useast1b_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229544224511:subnet/subnet-0b2bb298a80306553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0b2bb298a80306553",
            "map_public_ip_on_launch": false,
            "owner_id": "229544224511",
            "tags": {
              "Name": "EDIFY_10.0.0.0_USEAST_1B_PUB"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0e5be5c67371adb74"
          },
          "dependencies": [
            "aws_internet_gateway.edify_useast1_igw",
            "aws_vpc.edify_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edify_10_1_0_0_uswest2b_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:229544224511:subnet/subnet-0a5ed96890b47c6d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0a5ed96890b47c6d6",
            "map_public_ip_on_launch": false,
            "owner_id": "229544224511",
            "tags": {
              "Name": "EDIFY_10.1.0.0_USWEST_2B_PUB"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0f0300f8df3d3e36d"
          },
          "dependencies": [
            "aws_internet_gateway.edify_uswest2_igw",
            "aws_vpc.edify_vpc_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edify_10_2_0_0_useast2b_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:229544224511:subnet/subnet-0625efe75f8827e18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.2.0.0/24",
            "id": "subnet-0625efe75f8827e18",
            "map_public_ip_on_launch": false,
            "owner_id": "229544224511",
            "tags": {
              "Name": "EDIFY_10.2.0.0_USEAST_2B_PUB"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-005628e22f0fe3d47"
          },
          "dependencies": [
            "aws_internet_gateway.edify_useast2_igw",
            "aws_vpc.edify_vpc_midw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "edify_vpc_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229544224511:vpc/vpc-0e5be5c67371adb74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e356d336737962e0",
            "default_route_table_id": "rtb-0be745ec1a31083fa",
            "default_security_group_id": "sg-06a668adc244dd933",
            "dhcp_options_id": "dopt-bf1062c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e5be5c67371adb74",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be745ec1a31083fa",
            "owner_id": "229544224511",
            "tags": {
              "Name": "EDIFY_VPC_EAST"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "edify_vpc_midw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:229544224511:vpc/vpc-005628e22f0fe3d47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0eba173d168103c59",
            "default_route_table_id": "rtb-03d6b205a51a82a48",
            "default_security_group_id": "sg-042ae3a4c9062a859",
            "dhcp_options_id": "dopt-d023b7bb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-005628e22f0fe3d47",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03d6b205a51a82a48",
            "owner_id": "229544224511",
            "tags": {
              "Name": "EDIFY_VPC_MIDW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "edify_vpc_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:229544224511:vpc/vpc-0f0300f8df3d3e36d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01ccf08904b590b3a",
            "default_route_table_id": "rtb-0736411936d9c30d5",
            "default_security_group_id": "sg-04d9bfde3bf4669f1",
            "dhcp_options_id": "dopt-b995d7c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f0300f8df3d3e36d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0736411936d9c30d5",
            "owner_id": "229544224511",
            "tags": {
              "Name": "EDIFY_VPC_WEST"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "east2_to_east1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-0fbf5dad85c627186",
            "peer_owner_id": "229544224511",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0e5be5c67371adb74",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "EDIFY_USEAST2_USEAST1_PEER_REQUESTER"
            },
            "vpc_id": "vpc-005628e22f0fe3d47"
          },
          "dependencies": [
            "aws_vpc.edify_vpc_east",
            "aws_vpc.edify_vpc_midw",
            "data.aws_caller_identity.edify_useast1_caller_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "east2_to_west2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-097ec26e04c7d014c",
            "peer_owner_id": "229544224511",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0f0300f8df3d3e36d",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "EDIFY_USEAST2_USWEST2_PEER_REQUESTER"
            },
            "vpc_id": "vpc-005628e22f0fe3d47"
          },
          "dependencies": [
            "aws_vpc.edify_vpc_midw",
            "aws_vpc.edify_vpc_west",
            "data.aws_caller_identity.edify_caller_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "west2_to_east1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-0c225fe0fec176220",
            "peer_owner_id": "229544224511",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0e5be5c67371adb74",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "EDIFY_USWEST2_USEAST1_PEER_REQUESTER"
            },
            "vpc_id": "vpc-0f0300f8df3d3e36d"
          },
          "dependencies": [
            "aws_vpc.edify_vpc_east",
            "aws_vpc.edify_vpc_west",
            "data.aws_caller_identity.edify_caller_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "east2_east1_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0fbf5dad85c627186",
            "peer_owner_id": "229544224511",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0e5be5c67371adb74",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "EDIFY_USEAST2_USEAST1_ACCEPTER"
            },
            "vpc_id": "vpc-005628e22f0fe3d47",
            "vpc_peering_connection_id": "pcx-0fbf5dad85c627186"
          },
          "dependencies": [
            "aws_vpc_peering_connection.east2_to_east1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "east2_west2_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-097ec26e04c7d014c",
            "peer_owner_id": "229544224511",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0f0300f8df3d3e36d",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "EDIFY_USEAST2_USWEST2_ACCEPTER"
            },
            "vpc_id": "vpc-005628e22f0fe3d47",
            "vpc_peering_connection_id": "pcx-097ec26e04c7d014c"
          },
          "dependencies": [
            "aws_vpc_peering_connection.east2_to_west2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "west2_east1_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0c225fe0fec176220",
            "peer_owner_id": "229544224511",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0e5be5c67371adb74",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "EDIFY_USWEST2_USEAST1_ACCEPTER"
            },
            "vpc_id": "vpc-0f0300f8df3d3e36d",
            "vpc_peering_connection_id": "pcx-0c225fe0fec176220"
          },
          "dependencies": [
            "aws_vpc.edify_vpc_east",
            "aws_vpc.edify_vpc_west",
            "aws_vpc_peering_connection.west2_to_east1",
            "data.aws_caller_identity.edify_caller_id"
          ]
        }
      ]
    }
  ]
}